Fix dark mode flicker.

--- a/assets/scss/journal.scss
+++ b/assets/scss/journal.scss
@@ -706,7 +706,7 @@ a {
           }
         }
 
-        transition: all 0.2s linear;
+        //transition: all 0.2s linear;
         * {
           transition: all 0.2s linear;
         }
@@ -766,10 +766,6 @@ a {
     padding: 15px;
   }
   .post {
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.2s ease;
 
     padding: 0 0 20px 0;
     .post-head-wrapper {
